--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     <h2 class='day-text'>01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31</h2>
   </div>
 </div>
-updateCountdown()
+  <section id="licznik25">
+<p id="countdown" updateCountdown()></p>
+  </section>
 <section class="snow-container"></section>
 <section style="height: 200vh;">
 
