--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 </div>
   <section id="licznik25">
-<p id="countdown" updateCountdown()></p>
+<a href="https://mikolajki2024.github.io/mikolajki2024/"><p id="countdown" updateCountdown()></p></a>
   </section>
 <section class="snow-container"></section>
 <section style="height: 200vh;">
